--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.7.1",
     "eslint-plugin-standard": "^2.0.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
     "path": "^0.12.7",
     "react-css-modules": "^4.0.3",
