use stylus as the default style language

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "single page app example with react, react-router, css-modules",
   "main": "src/main.js",
   "scripts": {
-    "dev": "webpack --config ./build/webpack.dev.config.js && webpack-dev-server --config ./build/webpack.dev.config.js",
+    "dev": "webpack --display-error-details --config ./build/webpack.dev.config.js && webpack-dev-server --config ./build/webpack.dev.config.js",
     "build": "node build/build.js"
   },
   "keywords": [
@@ -41,6 +41,8 @@
     "react-css-modules": "^4.0.3",
     "react-router": "^3.0.0",
     "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.4.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2",
     "webpack-merge": "^0.17.0"
