--- a/package.json
+++ b/package.json
@@ -10,45 +10,49 @@
   "keywords": [
     "react"
   ],
+  "repository": "https://github.com/jinqiangshou/react_spa_example",
   "author": "horstxu",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.8",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.3",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "css-loader": "^0.26.0",
-    "eslint": "^3.10.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.12.1",
     "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^2.0.6",
-    "eslint-loader": "^1.6.1",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^1.7.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-react": "^6.7.1",
-    "eslint-plugin-standard": "^2.0.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-standard": "^2.3.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.24.1",
-    "lodash": "^4.17.2",
-    "normalize.css": "^5.0.0",
-    "opn": "^4.0.2",
+    "html-webpack-plugin": "^2.30.1",
+    "lodash": "^4.17.4",
+    "normalize.css": "^7.0.0",
+    "opn": "^5.1.0",
     "path": "^0.12.7",
-    "react-css-modules": "^4.0.3",
-    "react-router": "^3.0.0",
-    "style-loader": "^0.13.1",
+    "prop-types": "^15.6.0",
+    "react-css-modules": "^4.7.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "shelljs": "^0.7.8",
+    "style-loader": "^0.13.2",
     "stylus": "^0.54.5",
-    "stylus-loader": "^2.4.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-merge": "^0.17.0"
+    "stylus-loader": "^2.5.1",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.5",
+    "webpack-merge": "^4.1.1"
   }
 }
